feat: add public location api #1
